DST v1.0.0 (Release date: 2018-xx-xx)
=================
Changes:
- added a NEWS file
- documentation generated by Roxygen
- bca: New version; handles a new class named "bcaspec". Parameters added to work with definitions on product spaces (relations).
- plau trans: example modified in documentation of function plautrans 
- added utils (caplDecode)

DST v0.3: Initial release of package on CRAN (2015-01-13)
================