@@ -1,38 +1,46 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/belplau.R
 \name{belplau}
 \alias{belplau}
-\title{Calculation of the measures of belief and plausibility for each focal element of a matrix}
+\title{Calculation of the degrees of Belief and Plausibility}
 \usage{
-  belplau(x, remove = FALSE)
+belplau(x, remove = FALSE)
 }
 \arguments{
-  \item{x}{A matrix of propositions, i.e. 1 col of masses plus boolean matrix describing focal elements.}
-  \item{remove}{= TRUE removes focal elements with 0 mass.}
-}
-\description{
-  The input table x is a matrix of focal elements with their mass, generally obtained as the result of the function nzdsr (Dempster's rule of combination). Elements with zero mass can be removed if present. Measures of belief and plausibility are obtained.
-}
-\details{
-The belief function bel is defined by:\cr
-  bel(A)=Sum(m(B); B <= A), for every subset A of the frame of discernment.\cr
-The plausibility function pl is defined by:\cr
- pl(A)=Sum(m(B); B & A not empty), for every subset A of the frame of discernment.
+\item{x}{A belief function in its bca form (see \code{\link{bca}}).}
+
+\item{remove}{= TRUE: Focal elements with 0 mass are excluded.}
 }
 \value{
-A matrix of m rows by 2 columns, where m is the number of rows of the input matrix.
+A matrix of M rows by 3 columns is returned, where M is the number of focal elements: \itemize{
+ \item Column 1: the degree of belief Bel;
+ \item Column 2: the degree of Plausibility Pl;
+ \item Column 3: the Plausibility ratio
+   }
+}
+\description{
+Degrees of Belief (Bel) and Plausibility (Pl) of the focal elements of a belief function are obtained. Then the ratio of the plausibility of a focal element against the plausibility of its contrary is computed. Focal elements with zero mass can be excluded from the calculations.\cr
+The degree Belief Bel is defined by: \cr
+\eqn{bel(A) = Sum{(m(B); B <= A)}}, for every subset A of the frame of discernment.
+The plausibility function pl is defined by: \cr
+\eqn{pl(A) = Sum{(m(B); B & A not empty}}, for every subset A of the frame of discernment.
+The plausibility ratio of a focal element A versus its contrary ~A is defined by:  \eqn{Pl(A)/(1-Bel(A.))}.
+}
+\examples{
+x <- bca(f=matrix(c(0,1,1,1,1,0,1,1,1),nrow=3, byrow = TRUE), m=c(0.2,0.5, 0.3), cnames =c("a", "b", "c"), n=1)
+belplau(x)
+y <- bca(f=matrix(c(1,0,0,1,1,1),nrow=2, byrow = TRUE), m=c(0.6, 0.4),  cnames = c("a", "b", "c"), n=1)
+belplau(nzdsr(x,y))
+print("compare all elementary events")
+xy1 <- addTobca(nzdsr(x,y), matrix(c(0,1,0,0,0,1), nrow=2, byrow = TRUE))
+belplau(xy1) 
+}
+\references{
+\itemize{
+\item Shafer, G., (1976). A Mathematical Theory of Evidence. Princeton University Press, Princeton, New Jersey, p. 39-43.
+\item Williams, P., (1990). An interpretation of Shenoy and Shafer's axioms for local computation. International Journal of Approximate Reasoning 4, pp. 225-232.
+}
 }
 \author{
 Claude Boivin, Stat.ASSQ
 }
-\references{
-Shafer, G., (1976). A Mathematical Theory of Evidence. Princeton University Press, Princeton, New Jersey. 296 p.
-}
-\examples{
-## Not run: 
-x<-list(DempsterRule=t(matrix(c(.9,1,0,.1,1,1),ncol=2)),con=0)
-y<-list(DempsterRule=t(matrix(c(.5,0,1,.5,1,1),ncol=2)),con=0)
-r1<-dsrwon(x,y)
-r<-nzdsr(r1)
-bel<-belplau(r$DempsterRule)
-## End(Not run)
-}
-
