@@ -3,7 +3,10 @@ DST v1.0.0 (Release date: 2018-xx-xx)
 Changes:
 - added a NEWS file
 - documentation generated by Roxygen
+- addTobca: New function used to augment a bca definition with focal elements of zero mass.
 - bca: New version; handles a new class named "bcaspec". Parameters added to work with definitions on product spaces (relations).
+- bcaRel: New function to define a belief function on a product space.
+- belplau: Calculation of measures of belief, plausibility and ratio of plausibility.
 - plau trans: example modified in documentation of function plautrans 
 - added utils (caplDecode)
 
